feat(auth): add optional auto auth modal configuration
Add VITE_AUTO_AUTH_MODAL environment variable to control automatic
authentication modal behavior. When set to false, the auth modal will
not appear automatically on app load or on 401 errors. The modal will
only appear when users manually clear credentials in settings.

This enables optional authentication mode, useful for development
environments or scenarios where authentication is not required.

Changes:
- Add VITE_AUTO_AUTH_MODAL env variable support in auth store
- Update checkAuth() to respect the env variable
- Add handleExternalAuthClear() for conditional 401 error handling
- Update API client to notify auth store on 401 errors
- Update documentation (README, QUICK_START, env.example)

--- a/env.example
+++ b/env.example
@@ -54,6 +54,13 @@ VITE_API_BASE_URL=http://localhost:8000
 # Enable/disable prompt viewer
 # VITE_FEATURE_PROMPT_VIEWER=true
 
+# Enable/disable automatic authentication modal popup
+# When set to false, the auth modal will not appear automatically on app load
+# or on 401 errors. The modal will only appear when user manually clears
+# credentials in settings. App will function without authentication (optional auth mode)
+# Default: true (maintains current behavior)
+# VITE_AUTO_AUTH_MODAL=true
+
 # =============================================================================
 # Session Configuration (Optional)
 # =============================================================================
